--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,6 +8,9 @@
     <string name="quotation_sample_author">Esto es un autor de ejemplo</string>
     <string name="quotation_sample_text">Esto es una cita de ejemplo</string>
     <string name="settings_name_placeholder">Introduce tu nombre</string>
+    <string name="settings_key">username</string>
+    <string name="settings_databases">Databases</string>
+    <string name="opcionesAcceso">Opciones de acceso</string>
     <string name="settings_name_label">Nombre que identifica al usuario</string>
     <string name="settings_method_label">Las peticiones web HTTP se realizarán utilizando el protocolo HTTP seleccionado</string>
     <string name="settings_language_label">Las citas se recibirán en el idioma seleccionado</string>
