--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     sample autor”
     <string name="activity_random_quotations">Random quotations</string>
     <string name="quotation_hint">Hello %1s!\nPress Refresh to get a new quotation</string>
-    <string name="quotation_sample_text">This is a sample quotation</string>
-    <string name="quotation_sample_author">This is a sample author</string>
+    <string name="quotation_sample_text">This is a sample quotation, sample quote %1$d</string>
+    <string name="quotation_sample_author">This is a sample author, sample author %1$d</string>
 
     <!-- Favourite Activity -->
     <string name="activity_favourite_quotations">Favourite quotations</string>
@@ -26,11 +26,14 @@
     <!-- Settings Activity -->
     <string name="activity_settings">Settings</string>
     <string name="settings_name_label">Name that identifies the user</string>
+    <string name="settings_key">username</string>
     <string name="settings_name_placeholder">Insert your name</string>
     <string name="settings_language_label">Quotations will be received in the selected language</string>
     <string name="settings_method_label">Web requests will be performed using the selected HTTP method</string>
     <string name="settings_method_get" translatable="false">GET</string>
     <string name="settings_method_post" translatable="false">POST</string>
+    <string name="settings_databases">Databases</string>
+    <string name="opcionesAcceso">Access Options</string>
 
     <!-- About Activity -->
     <string name="activity_about">About</string>
@@ -46,4 +49,6 @@
     <string name="add">Add</string>
     <string name="refresh">Refresh</string>
     <string name="clear">Clear All</string>
+    <string name="title_activity_settings">Settings</string>
+
 </resources>
