--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <!-- Settings Activity -->
     <string name="activity_settings">Settings</string>
     <string name="settings_name_label">Name that identifies the user</string>
-    <string name="settings_key">username</string>
+    <string name="settings_key" translatable="false">username</string>
     <string name="settings_name_placeholder">Insert your name</string>
     <string name="settings_language_label">Quotations will be received in the selected language</string>
     <string name="settings_method_label">Web requests will be performed using the selected HTTP method</string>
@@ -34,8 +34,7 @@
     <string name="settings_method_post" translatable="false">POST</string>
     <string name="settings_databases">Databases</string>
     <string name="opcionesAcceso">Access Options</string>
-    <string name="settings_idioma_key">idioma</string>
-    <string name="settings_http_key">http</string>
+    <string name="settings_http_key" translatable="false">http</string>
 
     <!-- About Activity -->
     <string name="activity_about">About</string>
@@ -51,5 +50,6 @@
     <string name="add">Add</string>
     <string name="refresh">Refresh</string>
     <string name="clear">Clear All</string>
+    <string name="settings_idioma_key" translatable="false">idioma</string>
 
 </resources>
